--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<DOCTYPE html>
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
@@ -325,3 +325,4 @@ DOCTYPE html>
   </script>
 </body>
   </html>
+
